# hiveloom-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  claude-mcp-setup.md  deployment-hardening.md  hiveloom-cli-manual-local-testing.md
scripts/: install.sh  release.sh
src/: lib.rs  main.rs
src/cli/: agent.rs  apply.rs  auth.rs  backup.rs  capability.rs  chat.rs  client.rs  compaction_log.rs  credential.rs  event.rs  health.rs  interactive.rs  local.rs  logs.rs  mcp_identity.rs  mod.rs  schedule.rs  serve.rs  tenant.rs  tls.rs  top.rs  upgrade.rs
src/cli/tui/: chat_view.rs  command_bar.rs  context_panel.rs  form.rs  menu.rs  mod.rs  popup.rs  status_bar.rs  theme.rs  wizard.rs
src/compaction/: config.rs  counter.rs  engine.rs  event.rs  indicator.rs  mod.rs  summarizer.rs  truncator.rs
src/engine/: agent_loop.rs  capability_exec.rs  chat_surface.rs  conversation.rs  dedup.rs  event_router.rs  memory.rs  mod.rs  reflection.rs  scheduler.rs  workflow.rs
src/llm/: anthropic.rs  mod.rs  openai.rs  provider.rs
src/server/: events.rs  healthz.rs  mod.rs
src/server/admin_api/: agents.rs  auth_tokens.rs  backups.rs  capabilities.rs  chat.rs  compaction.rs  credentials.rs  event_subscriptions.rs  mcp_identities.rs  mod.rs  reflections.rs  scheduled_jobs.rs  tenants.rs
src/server/mcp/: auth.rs  mod.rs  session.rs  transport.rs
src/server/oauth/: client.rs  mod.rs  server.rs
src/server/slack/: auth.rs  events.rs  mod.rs
src/store/: mod.rs  platform.rs  tenant.rs  vault.rs
src/store/migrations/: mod.rs
(+19 files in other folders)
